# bully-maguire

./: .gitignore  CMakeLists.txt  Makefile  README.md  test.ps1  test.sh
NAVIGATION_LIB/: .gitignore  Blocks.pas  Info.pas  navigation_lib.dpr  navigation_lib.dproj  navigation_lib.res
generator/: CMakeLists.txt  generator.cpp  generator.hpp  main.cpp
point/: CMakeLists.txt  point.cpp  point.hpp
solution/: CMakeLists.txt  main.cpp  solution.cpp  solution.hpp  solutionAstronomicalSphere.cpp  solutionAstronomicalSphere.hpp  solutionExternal.cpp  solutionGeoid.cpp  solutionGeoid.hpp  solutionSphere.cpp  solutionSphere.hpp
test/: CMakeLists.txt  main.cpp  tester.cpp  tester.hpp
